...
          ...lockedButton("Pantry"),
        }}
      />
      <Tabs.Screen
        name="pay"
        options={{
          title: "Sahod ko",
          tabBarIcon: ({ color, size }) => <Ionicons name="card" size={size} color={color} />,
          ...lockedButton("Sahod ko"),
        }}
      />
      <Tabs.Screen
        name="record"
        options={{
          title: "Record ko",
          tabBarIcon: ({ color, size }) => (
            <Ionicons name="document-text" size={size} color={color} />
          ),
        }}
      />
    </Tabs>
...
